2005-07-15  Matt Johnston  <matt@ucc.asn.au>

  * netsync.cc (rebuild_merkle_trees): bad_branch_certs is a set of cert
  hashes, not of revision idents.

2005-07-14  Nathaniel Smith  <njs@pobox.com>

	* database.cc (get_revision_cert_index): "reserve" and "resize"
	are different.

2005-07-14  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (process_delta_cmd): Remove meaningless comment.

2005-07-14  Nathaniel Smith  <njs@pobox.com>

	* database.hh: Pre-declare sqlite3_stmt, instead of including
	sqlite3.h.

2005-07-14  Derek Scherger  <derek@echologic.com>

	* commands.cc (lca,lcad,try_one_merge): call describe_revision for
	logging common ancestors
	(propagate): log final merged line after propagate completes
	to indicate that it actually worked and to be consistent with merge

2005-07-13  Derek Scherger  <derek@echologic.com>

	* ChangeLog: merge fixup

2005-07-13  Derek Scherger  <derek@echologic.com>

	* database.cc (debug): delete stale comment
	(delete_branch_named):
	(delete_tag_named): 
	(clear): replace vprintf stuff with query parameters

2005-07-13  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (main): Optimistically run 'db
	migrate' before using database.

2005-07-13  Nathaniel Smith  <njs@pobox.com>

	* schema_migration.cc (migrate_monotone_schema)
	(migrator::migrate): Move the "nothing happened" check, and don't
	vacuum unless a migration occurred.

2005-07-13  Nathaniel Smith  <njs@pobox.com>

	* tests/t_restricted_diff_unchanged.at: New test.
	* testsuite.at: Add it.

2005-07-13  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc (cvs_branch::cvs_branch): Initialize bools to false.

2005-07-13  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Database): Document kill_tag_locally.

2005-07-13  Nathaniel Smith  <njs@pobox.com>

	* tests/t_kill_tag_locally.at, tests/t_ambiguous_tags.at: New
	tests.
	* testsuite.at: Add them.

2005-07-11  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Add Jordan.