@@ -1,7 +1,11 @@
+2005-07-16  Nathaniel Smith  <njs@pobox.com>
+
+	* ChangeLog: Fix formatting.
+
 2005-07-15  Matt Johnston  <matt@ucc.asn.au>
 
-  * netsync.cc (rebuild_merkle_trees): bad_branch_certs is a set of cert
-  hashes, not of revision idents.
+	* netsync.cc (rebuild_merkle_trees): bad_branch_certs is a set of cert
+	hashes, not of revision idents.
 
 2005-07-14  Nathaniel Smith  <njs@pobox.com>
 
